--- a/IntroCSS/CSSEjercicio1/index.html
+++ b/IntroCSS/CSSEjercicio1/index.html
@@ -14,6 +14,8 @@
         Este es el contenido del parrafo 2
     </p>
     <br/>
-    
+    <p style="color:#f8d077;">
+        Este es el contenido del parrafo 3
+    </p>
 </body>
 </html>
